Apply fix for Cart quantity edit form alignment issue

--- a/src/components/CartTableItem.scss
+++ b/src/components/CartTableItem.scss
@@ -49,6 +49,10 @@
                 text-align: left;
             }
 
+            *{
+                width: 100%;
+            }
+
         }
 
     }
